dxscale/core/serviceBase/objects/Service_Method__mdt/Service_Method__mdt.object-meta.xml
<CustomObject>
    <description>The Service Method CMT relates business method names and the Service record we’ve just identified to Service Versions</description>
    <label>Service Method</label>
    <pluralLabel>Service Methods</pluralLabel>
</CustomObject>