dxscale/core/serviceBase/objects/Service_Method__mdt/fields/External_Processing_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Processing_Id__c</fullName>
    <description>An id to help an external process a request. Only used for Remote Proxy Services.
For a Salesforce remote this is the Invocation Id on a remote system that invokes a service on that remote system.</description>
    <inlineHelpText>An id to help an external process a request. Only used for Remote Proxy Services.
For a Salesforce remote this is the Invocation Id on a remote system that invokes a service on that remote system.</inlineHelpText>
    <label>External Processing Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>