dxscale/core/serviceBase/objects/Service_Method__mdt/fields/How_Implemented__c.field-meta.xml
<CustomField>
    <fullName>How_Implemented__c</fullName>
    <description>How the Method is implemented. If &quot;Implementation&quot; then we need a related Service Implementation record</description>
    <inlineHelpText>How the Method is implemented. If &quot;Implementation&quot; then we need a related Service Implementation record</inlineHelpText>
    <label>How Implemented</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Implementation</fullName>
                <default>true</default>
                <label>Implementation</label>
            </value>
            <value>
                <fullName>PassThrough</fullName>
            </value>
            <value>
                <fullName>Chain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>