dxscale/core/serviceBase/objects/Service_Method__mdt/fields/Iteration__c.field-meta.xml
<CustomField>
    <fullName>Iteration__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Iteration of the Service that this Service Method is application to</description>
    <inlineHelpText>Iteration of the Service that this Service Method is application to</inlineHelpText>
    <label>Iteration</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>