dxscale/core/serviceBase/objects/Service_Method__mdt/fields/Next_Invocation__c.field-meta.xml
<CustomField>
    <fullName>Next_Invocation__c</fullName>
    <description>If this is part of a chain of invocations this points to the next invocation to call after this has completed</description>
    <inlineHelpText>If this is part of a chain of invocations this points to the next invocation to call after this has completed</inlineHelpText>
    <label>Next Invocation</label>
    <referenceTo>Service_Invocation__mdt</referenceTo>
    <relationshipLabel>Called by Chained Methods</relationshipLabel>
    <relationshipName>Called_By_Chained_Methods</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>