dxscale/core/serviceBase/objects/Service_Method__mdt/fields/Response_Invocation__c.field-meta.xml
<CustomField>
    <fullName>Response_Invocation__c</fullName>
    <description>If this is part of a chain of invocations this points to an invocation to call to process a response to the Next Invocation</description>
    <inlineHelpText>If this is part of a chain of invocations this points to an invocation to call to process a response to the Next Invocation</inlineHelpText>
    <label>Response Invocation</label>
    <referenceTo>Service_Invocation__mdt</referenceTo>
    <relationshipLabel>Called by Chained Response Methods</relationshipLabel>
    <relationshipName>Called_By_Chained_Response_Methods</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>