dxscale/core/serviceBase/objects/Service_Method__mdt/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <description>lookup to Service CMT</description>
    <inlineHelpText>lookup to Service CMT</inlineHelpText>
    <label>Service</label>
    <referenceTo>Service__mdt</referenceTo>
    <relationshipLabel>Service Methods</relationshipLabel>
    <relationshipName>Service_Methods</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>