dxscale/core/serviceBase/objects/Service_Method__mdt/fields/Service_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Service_Implementation__c</fullName>
    <description>Lookup to the Service Implementation MDT</description>
    <inlineHelpText>Lookup to the Service Implementation MDT</inlineHelpText>
    <label>Service Implementation</label>
    <referenceTo>Service_Implementation__mdt</referenceTo>
    <relationshipLabel>Service Methods</relationshipLabel>
    <relationshipName>Service_Methods</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>