dxscale/core/serviceBase/objects/Service_Method__mdt/fields/Supports_Async__c.field-meta.xml
<CustomField>
    <fullName>Supports_Async__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the Method supports asynchronous calls</description>
    <inlineHelpText>Checked if the Method supports asynchronous calls</inlineHelpText>
    <label>Supports Async</label>
    <type>Checkbox</type>
</CustomField>