dxscale/core/serviceBase/objects/Service_Method__mdt/validationRules/Implementation_Should_Be_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Implementation_Should_Be_Populated</fullName>
    <active>true</active>
    <description>If &quot;how implemented&quot; is set to &quot;implementation&quot; then we must have a lookup to Service Implementation</description>
    <errorConditionFormula>IF(  ISPICKVAL( How_Implemented__c , &quot;Implementation&quot;), 
 ISBLANK( Service_Implementation__c   ) , false
)</errorConditionFormula>
    <errorDisplayField>How_Implemented__c</errorDisplayField>
    <errorMessage>If &quot;how implemented&quot; is set to &quot;implementation&quot; then we must have a lookup to Service Implementation</errorMessage>
</ValidationRule>