dxscale/core/serviceBase/objects/Service_Method__mdt/validationRules/PassThrough_Should_Have_Next_Invocation.validationRule-meta.xml
<ValidationRule>
    <fullName>PassThrough_Should_Have_Next_Invocation</fullName>
    <active>true</active>
    <description>If &quot;how implemented&quot; is set to &quot;PassThrough&quot; then we should have a next invocation.</description>
    <errorConditionFormula>IF(  ISPICKVAL( How_Implemented__c , &quot;PassThrough&quot;), 
ISBLANK( Next_Invocation__c) , false
)</errorConditionFormula>
    <errorMessage>If &quot;how implemented&quot; is set to &quot;PassThrough&quot; then we should have a next invocation.</errorMessage>
</ValidationRule>