dxscale/core/serviceBase/objects/Service_Method__mdt/validationRules/PassThrough_Should_Not_Have_Implentation.validationRule-meta.xml
<ValidationRule>
    <fullName>PassThrough_Should_Not_Have_Implentation</fullName>
    <active>true</active>
    <description>If &quot;how implemented&quot; is set to &quot;PassThrough&quot; then we should not have a lookup to Service Implementation</description>
    <errorConditionFormula>IF(  ISPICKVAL( How_Implemented__c , &quot;PassThrough&quot;), 
 NOT(ISBLANK( Service_Implementation__c   )) , false
)</errorConditionFormula>
    <errorMessage>If &quot;how implemented&quot; is set to &quot;PassThrough&quot; then we should not have a lookup to Service Implementation</errorMessage>
</ValidationRule>